force-app/main/default/objects/AVA_BLNG__AvaTax_ExceptionLog__c/AVA_BLNG__AvaTax_ExceptionLog__c.object-meta.xml
<CustomObject>
    <label>AvaTax Application Log</label>
    <nameField>
        <label>AvaTax Application Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaTax Application Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>