force-app/main/default/objects/AVA_BLNG__AvaTax_ExceptionLog__c/fields/AVA_BLNG__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>