force-app/main/default/objects/AVA_BLNG__AvaTax_ExceptionLog__c/fields/AVA_BLNG__Log_Message__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Log_Message__c</fullName>
    <label>Log Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>