force-app/main/default/objects/AVA_BLNG__AvaTax_ExceptionLog__c/fields/AVA_BLNG__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>