force-app/main/default/objects/AVA_BLNG__AvaTax_ExceptionLog__c/fields/AVA_BLNG__Request_Log__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Request_Log__c</fullName>
    <label>Request Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>