force-app/main/default/objects/AVA_BLNG__AvaTax_ExceptionLog__c/fields/AVA_BLNG__Running_User__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Running_User__c</fullName>
    <label>Running User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>