force-app/main/default/objects/AVA_BLNG__AvaTax_ExceptionLog__c/fields/AVA_BLNG__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>