force-app/main/default/objects/AVA_BLNG__AvaTax_ExceptionLog__c/listViews/AVA_BLNG__All.listView-meta.xml
<ListView>
    <fullName>AVA_BLNG__All</fullName>
    <columns>NAME</columns>
    <columns>AVA_BLNG__Class_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>AVA_BLNG__Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>